# Find-Silhouette

./: CMakeLists.txt  README.md  SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  main.cpp  optimizer.cpp  satellite_model.mtl  scrap.cpp  simple_sat.mtl  tools.cpp  tools.hpp
common/: controls.cpp  objloader.cpp  objloader.hpp
